# search_rs

./: .gitignore  Cargo.toml
src/: main.rs
src/gui/: message.rs  mod.rs  window.rs
src/search/: find.rs  index.rs  mod.rs
