[package]
name = "search_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
iced = { version = "0.12.1", features = [ "async-std" ] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
